# API_USAGE

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: alembic.ini  config.py  database.py  logging_config.py  main.py  migrate_to_local_time.py  models.py  pyproject.toml  test_deepseek.json
backend/alembic/: env.py
backend/alembic/versions/: 9428951d372e_initial.py  a1b2c3d4e5f6_add_logo_path_to_categories.py  cd5b2a14347e_add_categories_and_category_id.py
backend/data/: .fernet_key  app.db-shm  app.db-wal
backend/routers/: categories.py  providers.py  stats.py
backend/services/: collector.py  crypto.py  scheduler.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/components/: CategoryWizard.vue  JsonPathTagCloud.vue  JsonTreeLeaf.vue  PillModeSelector.vue  ProviderWizard.vue  RingGaugeCard.vue
frontend/src/router/: index.ts
frontend/src/stores/: providers.ts  usage.ts
frontend/src/views/: BalanceView.vue  CategoryManager.vue  DashboardView.vue  ProviderView.vue  SpotlightView.vue
openspec/changes/add-spotlight-effect/: proposal.md
openspec/specs/backend-logging/: spec.md
openspec/specs/balance-consumed-stat/: spec.md
openspec/specs/balance-history/: spec.md
openspec/specs/billing-incremental-consumed/: spec.md
openspec/specs/category-logo-upload/: spec.md
openspec/specs/category-management/: spec.md
openspec/specs/category-step-wizard/: spec.md
openspec/specs/collapsible-sidebar/: spec.md
openspec/specs/db-migrations/: spec.md
(+142 files in other folders)
